Buttons visibility dirty fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -171,3 +171,7 @@ body {
 .text-red {
     color: red;
 }
+
+.hidden {
+    display: none;
+}
